Fixed a bunch of layout bugs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,16 +126,6 @@
 	margin-top: 40px;
 }
 
-.feed{
-/*	background-color: #FAFAFA;
-	-moz-border-radius:10px;
-	-webkit-border-radius:10px;
-	-khtml-border-radius:10px;
-	border-radius: 10px;*/
-
-
-}
-
 .activity{
 	position:relative;
 	background-color:#ECEAE0;
